installed chakra, corrected alignments

--- a/ui/public/styles/components/breadcrumb.scss
+++ b/ui/public/styles/components/breadcrumb.scss
@@ -4,5 +4,5 @@
 }
 
 .c-breadcrumb-separator {
-  margin-top: -5px;
+  margin-top: 3px;
 }
