--- a/ui/public/styles/components/logo-idea.scss
+++ b/ui/public/styles/components/logo-idea.scss
@@ -6,7 +6,7 @@
 @media only screen and (min-width: 1250px) {
   .c-logoheader
   {
-    display: inline-block;
+    display: flex;
   }
 }
 
